--- a/Borger/.vscode/settings.json
+++ b/Borger/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/albert/.local/share/virtualenvs/Borger-0SPiXlDE/bin/python"
+    "python.pythonPath": "/usr/bin/python3"
 }
